--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/neshka/HappyAPI#readme",
   "dependencies": {
+    "config": "3.3.7",
+    "debug": "4.3.4",
     "express": "4.18.1",
+    "joi": "17.6.0",
     "nodemon": "2.0.19"
   }
 }
